--- a/app/src/main/res/layout/list_movie_item.xml
+++ b/app/src/main/res/layout/list_movie_item.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    card_view:cardUseCompatPadding="true"
     card_view:cardCornerRadius="4dp"
-    card_view:cardElevation="6dp">
+    card_view:cardElevation="6dp"
+    card_view:cardUseCompatPadding="true">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,22 +14,25 @@
         android:orientation="vertical">
 
         <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            android:paddingStart="10dp"
             android:paddingLeft="10dp"
             android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:background="@color/colorPrimary"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:paddingEnd="0dp"
+            android:paddingRight="0dp"
+            android:paddingBottom="10dp">
 
             <TextView
                 android:id="@+id/tv_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:maxLines="1"
                 android:ellipsize="end"
+                android:maxLines="1"
                 android:textColor="@android:color/white"
-                android:text="title" />
+                android:textSize="16sp"
+                tools:text="title" />
 
         </LinearLayout>
 
@@ -42,7 +46,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
-                android:padding="2dp" />
+                android:padding="2dp"
+                tools:ignore="ContentDescription" />
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -50,15 +55,15 @@
                 android:layout_weight="4"
                 android:orientation="vertical"
                 android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:paddingTop="6dp">
+                android:paddingTop="6dp"
+                android:paddingRight="16dp">
 
                 <TextView
                     android:id="@+id/tv_published_year"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:text="19xx" />
+                    tools:text="19xx" />
 
                 <TextView
                     android:id="@+id/tv_overview"
@@ -67,7 +72,7 @@
                     android:layout_marginTop="5dp"
                     android:ellipsize="end"
                     android:maxLines="5"
-                    android:text="overview" />
+                    tools:text="overview" />
 
             </LinearLayout>
         </LinearLayout>
