- added movie detail.

--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -28,6 +28,8 @@
                     android:id="@+id/etSearch"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:inputType="text"
+                    android:imeOptions="actionDone"
                     android:layout_weight="1" />
 
                 <android.support.v7.widget.AppCompatImageView
