--- a/app/src/main/res/layout/item_genre.xml
+++ b/app/src/main/res/layout/item_genre.xml
@@ -7,7 +7,10 @@
     <android.support.v7.widget.AppCompatTextView
         style="@style/Base.TextAppearance.AppCompat.Caption"
         android:background="@drawable/tag_shape"
-        android:padding="8dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
         android:id="@+id/tvGenre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
