--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
     <item
         android:id="@+id/item_home"
         android:enabled="true"
         android:icon="@android:drawable/ic_menu_view"
-        android:title="Home"/>
+        android:title="@string/title_home" />
     <item
         android:id="@+id/item_search"
         android:enabled="true"
         android:icon="@android:drawable/ic_menu_search"
-        android:title="Search"/>
+        android:title="@string/title_search" />
     <item
         android:id="@+id/item_setting"
         android:enabled="true"
         android:icon="@android:drawable/ic_menu_set_as"
-        android:title="Setting"/>
-
+        android:title="@string/title_setting" />
 </menu>
